Fix overflow problem of charts

--- a/homework-week10-task2/css/styles.css
+++ b/homework-week10-task2/css/styles.css
@@ -16,7 +16,8 @@ body {
 
 .vis-container {
     width: 100%;
-	height: 500px;
+	height: 300px;
+	overflow: auto;
 }
 
 .description h2,
